# Darkened

./: .gitignore  CMakeLists.txt  Darkened.sln  README.md  run_test.py
Darkened/: Darkened.csproj  Game.cs  Program.cs
Darkened.Engine/: Class1.cs  Darkened.Engine.csproj
Darkened.Engine/Core/: StateMachine.cs
Darkened.Engine/Core/Interfaces/: IState.cs  IStateMachine.cs
Darkened.Engine/DataStructures/: DirectedGraph.cs  Tree.cs  UndirectedGraph.cs
Darkened.Engine/Input/: KeyboardInputHandler.cs
Darkened.Engine/Input/Interfaces/: IInputHandler.cs
Darkened.Engine/Logging/: Logger.cs
Darkened.Engine/Logging/Interfaces/: ILogger.cs
Darkened.Game/: Darkened.Game.csproj  Program.cs
Darkened/Assets/Sprites/: jec0avukqiu61.ascii.txt
Darkened/Core/: Player.cs  Spells.cs
Darkened/Core/Engine/: ActionMove.cs  IState.cs  InputHandler.cs  StateMachine.cs
Darkened/Core/Entities/: Armour.cs  Enemy.cs  Item.cs  Move.cs  NPC.cs  Player.cs  Spell.cs  Weapon.cs
Darkened/Core/Interfaces/: ICombator.cs  IStaticData.cs  IfInputHandler.cs
Darkened/Core/Systems/: ActionHandler.cs  ActionMove.cs  CombatEncounter.cs  GameMode.cs  Magic.cs  MenuState.cs  Renderer.cs  SpellCaster.cs
Darkened/Core/Systems/Combat/: ActionHandler.cs  CombatEncounter.cs  CombatState.cs  ICombator.cs  SpellCaster.cs
Darkened/Core/Systems/Novel/: Scenario.cs  Scene.cs
Darkened/Core/Systems/Scenario/: Scene.cs
Darkened/Data/: File.cs  Globals.cs  IFile.cs  JsonParser.cs  Logger.cs  Tree.cs
Darkened/Data/Interface/: IDatabase.cs  IJson.cs  IRender.cs
Darkened/Data/Interfaces/: IFile.cs
Darkened/Data/Scenarios/: Opening.json
Darkened/Data/Static/: Items.json  NPC.json  Spells.json
Darkened/Main/: Darkened.json  Game.cs  Program.cs
Darkened/Rendering/: Renderer.cs
Darkened/Rendering/UI/: CheckMenuItem.cs  CombatMenu.cs  MDirection.cs  MenuItem.cs  UIMenu.cs
Darkened/SFML/UI/: CombatMenu.cs  UIMenu.cs
Darkened/State/: GameMode.cs  StateMachine.cs
Database/: Database.cs
Entities/: Enemy.cs  Entities.csproj  Item.cs  Map.cs  NPC.cs  Player.cs  Stat.cs  Weapon.cs
GameSys/: DialogueDriver.cs
RenderLib/: AsciiRenderer.cs  Sprite.cs
Tests/DatabaseTest/: DatabaseTest.cs  DatabaseTest.csproj  GlobalUsings.cs
Tests/EntitiesTest/: EntitiesTest.csproj  PlayerTest.cs  StatTest.cs
Tests/GameSysTest/: DialogueDriverTest.cs  GameSysTest.csproj  GlobalUsings.cs
Tests/RenderLibTest/: GlobalUsings.cs  RenderLibTest.csproj  SpriteTest.cs  UnitTest1.cs
Tests/UnitTests/: PlayerTests.cs  UnitTests.csproj
Tests/UnitTests/Core/Engine/: StateMachineTests.cs
Tests/UnitTests/Core/Entities/: PlayerTests.cs
Tests/UnitTests/Data/: JsonParserTests.cs  TreeTests.cs
database/: enemies.csv
logs/: Sun Sep 10 22:44:49 2023  Sun Sep 10 23:34:39 2023  Tue Sep 12 16:40:42 2023  Tue Sep 12 16:47:38 2023  Tue Sep 12 16:49:58 2023  Tue Sep 12 16:50:51 2023
src/: armor.h  battle.h  elements.h  enemy.h  error.cpp  error.h  global.h  item.h  log.h  main.cpp  player.cpp  player.h  random.cpp  random.h  stat.cpp  stat.h
src/error_handling/: error.cpp  log.cpp
src/error_handling/include/: error.h  log.h
src/game/: enemy.cpp  player.cpp  stat.cpp
src/game/classes/: battle.cpp  enemy.cpp  player.cpp  random.cpp  stat.cpp
src/game/classes/include/: armor.h  battle.h  enemy.h  item.h  player.h  stat.h
src/game/include/: battle.h  enemy.h  global.h  player.h  random.h  stat.h
src/game/modules/: terminalIO.cpp
src/game/sys/: database.cpp  input_output.cpp  terminalIO.cpp
src/game/sys/include/: database.h  global.h  input_output.h
src/sys/: save.cpp  terminalIO.cpp
src/sys/include/: save.h  terminalIO.h
tests/: CMakeLists.txt  test  test_case.h  test_driver.cpp  test_run  test_runner.cpp  unit_tests.h
tests/unit_tests/: database_testing.h  player_testing.h  stat_testing.h
